# spectest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  md_writer.rs  to_cmark.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/spectest/: Cargo.toml
src/spectest/src/: core.rs  lib.rs  md.rs
src/spectest/src/core/: reader.rs
src/spectest/src/md/: reader.rs  writer.rs
src/spectest/testdata/integration/meval/: closed_exprs.md  variable_exprs.md
src/spectest/testdata/md_writer/: basic_specs.md  code_blocks.md
src/spectest/tests/: integration.rs
testdata/markdown_output/: basic_syntax.md  lists.md  nested.md
tests/: test_md_writer.rs
