[workspace]
resolver = "2"
members = ["src/*"]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Alexander Alexandrov <alexander.s.alexandrov@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["BDD", "testing", "spec", "tests"]
categories = ["development-tools::testing"]
repository = "https://github.com/aalexandrov/mdspec"
