[package]
name = "spectest_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Macros for the `spectest` package."
readme = "../../README.md"

[lib]
proc-macro = true
bench = false

[dependencies]
glob = "0.3.1"
indoc = "2"
proc-macro2 = "1.0.69"
quote = "1.0.9"
syn = { version = "2.0.8", features = ["full"] }
