[package]
name = "spectest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "A lightweight library for defining behavior-driven development (BDD) style tests in exernal files and running them with `cargo test`."
readme = "../../README.md"

[features]
default = ["macros"]

# Optional
macros = ["dep:spectest_macros"]

[lib]
bench = false

[dependencies]
# Rust macros (re-exported by this crate if the `macros` feature is enabled).
spectest_macros = { path = "../macros", version = "0.1.0", optional = true }
# Other dependencies
clap = { version = "4.5", features = ["derive", "env"] }
pulldown-cmark = "0.11"
thiserror = "1.0.61"

[dev-dependencies]
# The rust macros are required for most tests.
spectest_macros = { path = "../macros", version = "0.1.0" }
# Other dependencies
indoc = "2"
meval = "0.2"
tempfile = "3.10.1"
textwrap = "0.16.1"
